--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>agent_web</title>
+  <title>Agent</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
@@ -36,7 +36,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '2533414308';
+    var serviceWorkerVersion = '1493760340';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
