--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Agent">
+  <meta name="apple-mobile-web-app-title" content="agent_web">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
@@ -36,7 +36,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '1493760340';
+    var serviceWorkerVersion = '867111013';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
