--- a/web/index.html
+++ b/web/index.html
@@ -28,7 +28,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>agent_web</title>
+  <title>Agent</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
